<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">
    <item android:id="@+id/search"
        android:title="@string/menuSearch"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/website"
        android:title="@string/website"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/menuSettings" />
    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menuLeave" />
</menu>