...
        android:src="@drawable/ic_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvAppName"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
...
